# raytracer

./: .gitignore  BlinnPhong.cpp  BlinnPhong.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Cone.cpp  Cone.h  Disk.cpp  Disk.h  Makefile  Minnaert.cpp  Minnaert.h  NFF.cpp  NFF.h  Phong.cpp  Phong.h  Polygon.cpp  Polygon.h  Primitive.cpp  Primitive.h  README.md  Scene.cpp  Scene.h  SpacePartition.cpp  SpacePartition.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h  VectorMath.cpp  VectorMath.h  main.cpp
